Closed
Bug 1362839
Opened 9 years ago
Closed 9 years ago
Crash in mozilla::ipc::MessageChannel::AssertWorkerThread | mozilla::ipc::MessageChannel::CxxStackFrame::CxxStackFrame | mozilla::ipc::MessageChannel::Send | mozilla::layers::PWebRenderBridgeChild::SendReleaseCompositable
Categories
(Core :: Graphics: WebRender, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla55
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox53 | --- | unaffected |
| firefox54 | --- | unaffected |
| firefox55 | --- | fixed |
People
(Reporter: marcia, Assigned: aosmond)
Details
(Keywords: crash, Whiteboard: gfx-noted)
Crash Data
Attachments
(1 file, 1 obsolete file)
|
1.01 KB,
patch
|
aosmond
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-88f640ac-a21d-4719-94cd-b5d340170505.
=============================================================
Seen while looking at nightly crash stats - started using 20170504030320: http://bit.ly/2pTXttP
Possible regression range based on Build ID: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=82c2d17e74ef9cdf38a5d5ac4eb3ae846ec30ba4&tochange=33b92d9c40562dab3d7b602368c75619f1d793f7
Comment 1•9 years ago
|
||
I get this only on Windows 10 (64 bit). Same STR as bug 1360613 (click to make a youtube video fullscreen when webrender is enabled). After the 3rd (tab) crash, the GPU process is deactivated by runtime. After that, everything "works".
bp-a87f466e-a89b-40d0-a3c2-7bb5c0170513
bp-13c8e097-e13a-4a28-9fc4-aa90a0170513
bp-48c37879-ebd2-4a7f-87e0-142090170513
bp-a87f466e-a89b-40d0-a3c2-7bb5c0170513
are from me.
| Assignee | ||
Comment 2•9 years ago
|
||
This happens when the GPU process crashed and it was tearing down the content process graphics bits during reinitialization. Makes sense this is only observed on Windows because on Linux/Mac the UI process and GPU process are combined, so it doesn't support the GPU process crashing and the UI process bringing it back up :). The IPC channel is gone but we don't check for that here, so a pretty easy fix. I'll put something together.
Assignee: nobody → aosmond
| Assignee | ||
Updated•9 years ago
|
Priority: -- → P3
Whiteboard: gfx-noted
| Assignee | ||
Comment 3•9 years ago
|
||
Attachment #8867509 -
Flags: review?(sotaro.ikeda.g)
Comment 4•9 years ago
|
||
Comment on attachment 8867509 [details] [diff] [review]
Handle GPU resets more gracefully, v1
Review of attachment 8867509 [details] [diff] [review]:
-----------------------------------------------------------------
mDestroyed is already used in WebRenderBridgeChild to check if we could send ipc message. But IPCOpen() might be a better choice here.
Attachment #8867509 -
Flags: review?(sotaro.ikeda.g) → review+
| Assignee | ||
Comment 5•9 years ago
|
||
(In reply to Sotaro Ikeda [:sotaro] from comment #4)
> Comment on attachment 8867509 [details] [diff] [review]
> Handle GPU resets more gracefully, v1
>
> Review of attachment 8867509 [details] [diff] [review]:
> -----------------------------------------------------------------
>
> mDestroyed is already used in WebRenderBridgeChild to check if we could send
> ipc message. But IPCOpen() might be a better choice here.
Easy for me to change :).
Attachment #8867509 -
Attachment is obsolete: true
Attachment #8867667 -
Flags: review+
Pushed by aosmond@gmail.com:
https://hg.mozilla.org/projects/graphics/rev/ba9b2448c357
Handle GPU resets more gracefully. r=sotaro
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Updated•9 years ago
|
status-firefox53:
--- → unaffected
status-firefox54:
--- → unaffected
status-firefox-esr52:
--- → unaffected
Target Milestone: --- → mozilla55
Comment 7•9 years ago
|
||
| bugherder | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•