Bug 1362839 - Handle GPU resets more gracefully. r=sotaro